<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jungle"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenu" >

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/Virtual_tour"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_below="@+id/button1"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/gallery_images"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/button2"
        android:layout_marginTop="36dp"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/Quizzes_activities"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="33dp"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/map_view"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="35sp"
        android:textStyle="bold" />
    
</RelativeLayout>