<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/jungle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="900dp" >
    <Button
        android:id="@+id/Q3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@android:drawable/alert_dark_frame"
        android:gravity="center"
        android:text="@string/Q3"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_below="@+id/Q3"
        android:background="@android:drawable/alert_dark_frame"
        android:ems="10"
        android:hint="@string/Type"
        android:inputType="text"
        android:textColor="@android:color/holo_green_dark"
        android:textColorHint="@android:color/holo_green_dark"/>

    <Button
        android:id="@+id/save"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/editText"
        android:layout_toRightOf="@+id/editText"
        android:background="@android:drawable/alert_dark_frame"
        android:onClick="SaveAnswer"
        android:text="@string/Okay"
        android:textColor="@android:color/holo_green_dark" />

       <Button
           android:id="@+id/Q1"
           android:layout_width="180dp"
           android:layout_height="80dp"
           android:layout_alignParentEnd="true"
           android:layout_alignParentLeft="true"
           android:layout_alignParentRight="true"
           android:layout_alignParentStart="true"
           android:layout_below="@+id/editText"
           android:layout_marginTop="20dp"
           android:background="@android:drawable/alert_dark_frame"
           android:text="@string/Q1"
           android:textColor="@android:color/holo_green_dark"
           android:textSize="20sp" />

      <Button
          android:id="@+id/answer3"
          android:layout_width="115dp"
          android:layout_height="85dp"
          android:layout_alignBottom="@+id/answer1"
          android:layout_centerHorizontal="true"
          android:background="@android:drawable/alert_dark_frame"
          android:text="@string/A2"
          android:textColor="@android:color/holo_green_dark"
          android:textSize="12sp" />

      <Button
          android:id="@+id/answer2"
          android:layout_width="115dp"
          android:layout_height="85dp"
          android:layout_alignBaseline="@+id/answer1"
          android:layout_alignBottom="@+id/answer3"
          android:layout_alignParentEnd="true"
          android:layout_alignParentRight="true"
          android:background="@android:drawable/alert_dark_frame"
          android:text="@string/A3"
          android:textColor="@android:color/holo_green_dark"
          android:textSize="12sp" />

      <Button
          android:id="@+id/answer1"
          android:layout_width="115dp"
          android:layout_height="85dp"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_below="@+id/Q1"
          android:background="@android:drawable/alert_dark_frame"
          android:text="@string/A1"
          android:textColor="@android:color/holo_green_dark"
          android:textSize="12sp" />

        <Button
            android:id="@+id/Q2"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/answer3"
            android:layout_marginTop="24dp"
            android:background="@android:drawable/alert_dark_frame"
            android:text="@string/Q2"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="15sp" />

        <Button
            android:id="@+id/answer2_1"
            android:layout_width="115dp"
            android:layout_height="60dp"
            android:layout_alignLeft="@+id/answer3"
            android:layout_alignStart="@id/answer3"
            android:layout_alignTop="@+id/answer1_1"
            android:background="@android:drawable/alert_dark_frame"
            android:text="@string/A2.1"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="12sp" />

         <Button
             android:id="@+id/answer3_1"
             android:layout_width="115dp"
             android:layout_height="60dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/answer1_1"
             android:background="@android:drawable/alert_dark_frame"
             android:text="@string/A3.1"
             android:textColor="@android:color/holo_green_dark"
             android:textSize="12sp" />

         <Button
             android:id="@+id/answer1_1"
             android:layout_width="115dp"
             android:layout_height="60dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/Q2"
             android:background="@android:drawable/alert_dark_frame"
             android:text="@string/A1.1"
             android:textColor="@android:color/holo_green_dark"
             android:textSize="12sp" />
        
    </RelativeLayout>

</ScrollView>