<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jungle" >

   <EditText
       android:id="@+id/user"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/text1"
       android:layout_alignBottom="@+id/text1"
       android:layout_toEndOf="@id/text1"
       android:layout_toRightOf="@+id/text1"
       android:background="@android:drawable/alert_dark_frame"
       android:ems="10"
       android:inputType="text"
       android:textColor="@android:color/holo_green_dark" />

   <EditText
       android:id="@+id/pass"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignEnd="@id/user"
       android:layout_alignLeft="@+id/user"
       android:layout_alignRight="@+id/user"
       android:layout_alignStart="@id/user"
       android:layout_alignTop="@+id/text2"
       android:background="@android:drawable/alert_dark_frame"
       android:ems="10"
       android:inputType="textPassword"
       android:textColor="@android:color/holo_green_dark" >

       <requestFocus />
   </EditText>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:layout_marginTop="46dp"
        android:layout_toLeftOf="@+id/pass"
        android:layout_toStartOf="@+id/user"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/passwd"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/login"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold" />
   
</RelativeLayout>
