<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/jungle" >

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="854dp">

 <Button
     android:id="@+id/Q1A"
     android:layout_width="143dp"
     android:layout_height="70dp"
     android:layout_alignParentEnd="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentRight="true"
     android:layout_alignParentStart="true"
     android:layout_alignParentTop="true"
     android:layout_marginTop="21dp"
     android:background="@android:drawable/alert_dark_frame"
     android:text="@string/Q1A"
     android:textColor="@android:color/holo_green_dark"
     android:textSize="14sp" />

 <Button
     android:id="@+id/A3"
     android:layout_width="115dp"
     android:layout_height="70dp"
     android:layout_alignBaseline="@+id/A2"
     android:layout_alignBottom="@+id/A2"
     android:layout_alignParentEnd="true"
     android:layout_alignParentRight="true"
     android:background="@android:drawable/alert_dark_frame"
     android:text="@string/Answ3"
     android:textColor="@android:color/holo_green_dark"
     android:textSize="12sp" />

 <Button
     android:id="@+id/Answ3_1"
     android:layout_width="115dp"
     android:layout_height="70dp"
     android:layout_alignBaseline="@+id/Answ2_1"
     android:layout_alignBottom="@+id/Answ2_1"
     android:layout_alignParentEnd="true"
     android:layout_alignParentRight="true"
     android:background="@android:drawable/alert_dark_frame"
     android:text="@string/Answ3.1"
     android:textColor="@android:color/holo_green_dark"
     android:textSize="12sp" />

 <Button
     android:id="@+id/Answ2_1"
     android:layout_width="115dp"
     android:layout_height="70dp"
     android:layout_alignBaseline="@+id/Answ1_1"
     android:layout_alignBottom="@+id/Answ1_1"
     android:layout_alignLeft="@+id/A2"
     android:layout_alignStart="@id/A2"
     android:background="@android:drawable/alert_dark_frame"
     android:text="@string/Answ2.1"
     android:textColor="@android:color/holo_green_dark"
     android:textSize="12sp" />

 <Button
     android:id="@+id/Q1B"
     android:layout_width="143dp"
     android:layout_height="70dp"
     android:layout_alignParentEnd="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentRight="true"
     android:layout_alignParentStart="true"
     android:layout_below="@+id/A1"
     android:layout_marginTop="21dp"
     android:background="@android:drawable/alert_dark_frame"
     android:text="@string/Q1B"
     android:textColor="@android:color/holo_green_dark"
     android:textSize="14sp" />

 <Button
     android:id="@+id/Answ1_1"
     android:layout_width="115dp"
     android:layout_height="70dp"
     android:layout_below="@+id/Q1B"
     android:layout_toLeftOf="@+id/Answ2_1"
     android:layout_toStartOf="@id/Answ2_1"
     android:background="@android:drawable/alert_dark_frame"
     android:text="@string/Answ1.1"
     android:textColor="@android:color/holo_green_dark"
     android:textSize="12sp" />

 <Button
     android:id="@+id/QC"
     android:layout_width="115dp"
     android:layout_height="70dp"
     android:layout_alignParentEnd="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentRight="true"
     android:layout_alignParentStart="true"
     android:layout_below="@+id/Answ3_1"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="23dp"
     android:background="@android:drawable/alert_dark_frame"
     android:text="@string/Q1C"
     android:textColor="@android:color/holo_green_dark"
     android:textSize="14sp" />

     <Button
         android:id="@+id/Answ1_2"
         android:layout_width="115dp"
         android:layout_height="70dp"
         android:layout_alignBaseline="@+id/Answ2_2"
         android:layout_alignBottom="@+id/Answ2_2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="@android:drawable/alert_dark_frame"
         android:text="@string/Answ1.2"
         android:textColor="@android:color/holo_green_dark"
         android:textSize="12sp" />

     <Button
         android:id="@+id/Answ3_2"
         android:layout_width="115dp"
         android:layout_height="70dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/QC"
         android:background="@android:drawable/alert_dark_frame"
         android:text="@string/Answ3.2"
         android:textColor="@android:color/holo_green_dark"
         android:textSize="12sp" />

     <Button
         android:id="@+id/Answ2_2"
         android:layout_width="115dp"
         android:layout_height="70dp"
         android:layout_alignLeft="@+id/Answ2_1"
         android:layout_alignStart="@id/Answ2_1"
         android:layout_alignTop="@+id/Answ3_2"
         android:background="@android:drawable/alert_dark_frame"
         android:text="@string/Answ2.2"
         android:textColor="@android:color/holo_green_dark"
         android:textSize="12sp" />

      <Button
          android:id="@+id/Q1D"
          android:layout_width="115dp"
          android:layout_height="70dp"
          android:layout_alignParentEnd="true"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_alignParentStart="true"
          android:layout_below="@+id/Answ1_2"
          android:layout_marginTop="24dp"
          android:background="@android:drawable/alert_dark_frame"
          android:text="@string/Q1D"
          android:textColor="@android:color/holo_green_dark"
          android:textSize="14sp" />

      <Button
          android:id="@+id/Answ1_3"
          android:layout_width="115dp"
          android:layout_height="90dp"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_below="@+id/Q1D"
          android:background="@android:drawable/alert_dark_frame"
          android:text="@string/Answ1.3"
          android:textColor="@android:color/holo_green_dark"
          android:textSize="12sp" />

       <Button
           android:id="@+id/Answ3_3"
           android:layout_width="115dp"
           android:layout_height="90dp"
           android:layout_alignParentEnd="true"
           android:layout_alignParentRight="true"
           android:layout_below="@+id/Q1D"
           android:layout_toRightOf="@+id/Answ2_3"
           android:layout_toEndOf="@+id/Answ2_3"
           android:background="@android:drawable/alert_dark_frame"
           android:text="@string/Answ3.3"
           android:textColor="@android:color/holo_green_dark"
           android:textSize="12sp" />

       <Button
           android:id="@+id/Answ2_3"
           android:layout_width="115dp"
           android:layout_height="90dp"
           android:layout_alignTop="@+id/Answ1_3"
           android:layout_toRightOf="@+id/Answ1_1"
           android:layout_toEndOf="@+id/Answ1_1"
           android:background="@android:drawable/alert_dark_frame"
           android:text="@string/Answ2.3"
           android:textColor="@android:color/holo_green_dark"
           android:textSize="12sp" />

       <Button
           android:id="@+id/Submit"
           android:layout_width="115dp"
           android:layout_height="90dp"
           android:layout_alignParentEnd="true"
           android:layout_alignParentLeft="true"
           android:layout_alignParentRight="true"
           android:layout_alignParentStart="true"
           android:layout_alignParentTop="false"
           android:layout_below="@+id/Answ1_3"
           android:layout_marginTop="33dp"
           android:layout_toEndOf="@+id/Answ1_1"
           android:layout_toRightOf="@+id/Answ1_1"
           android:background="@android:drawable/alert_dark_frame"
           android:text="@string/Submit"
           android:textColor="@android:color/holo_green_dark"
           android:textSize="30sp" />

       <Button
           android:id="@+id/A2"
           android:layout_width="115dp"
           android:layout_height="70dp"
           android:layout_above="@+id/Q1B"
           android:layout_alignBottom="@id/A1"
           android:layout_centerHorizontal="true"
           android:background="@android:drawable/alert_dark_frame"
           android:text="@string/Answ2"
           android:textColor="@android:color/holo_green_dark"
           android:textSize="12sp" />

       <Button
           android:id="@+id/A1"
           android:layout_width="115dp"
           android:layout_height="70dp"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
           android:layout_below="@+id/Q1A"
           android:background="@android:drawable/alert_dark_frame"
           android:text="@string/Answ1"
           android:textColor="@android:color/holo_green_dark"
           android:textSize="12sp" />
 
</RelativeLayout>
</ScrollView>
